--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,7 @@
 .App {
-  text-align: center;
+  max-width: 50em;
+  margin: 0 auto;
+  padding: 32px;
 }
 
 .App-logo {
@@ -35,4 +37,14 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.todo-input {
+  font-size: 24px;
+  border: none;
+  width: 100%;
+}
+
+.todo-input:focus {
+
 }
