--- a/src/App.css
+++ b/src/App.css
@@ -1,53 +1,25 @@
 .App {
   max-width: 50em;
-  margin: 0 auto;
+  margin: 100px auto;
   padding: 32px;
   border: 2px solid black;
-  background-color: lightblue;
-}
-
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  border-radius: 5px;
 }
 
 .todo-input {
   font-size: 24px;
-  border: none;
+  border-style: none none none solid; 
+  border-width: 5px;
+  border-color: rgb(160, 5, 165);
   width: 100%;
 }
 
-.todo-input:focus {
+ul {
+  border-style: solid;
+  border-color: grey;
+  border-width: 1px;
+}
 
+.complete-btn {
+  margin: auto auto auto 90%;
 }
