--- a/src/App.css
+++ b/src/App.css
@@ -24,8 +24,8 @@
   color: purple;
 }
 
-li {
+.todo-list {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   margin: auto;
 }
